# fake-shop

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.fletx/: config.json
app/: __init__.py  routes.py
app/components/: __init__.py  bannercard_component.py  bannerlist_component.py  cartitem_component.py  cartitemlist_component.py  categorycard_component.py  categorylist_component.py  emptylist_component.py  formfield_component.py  loginform_component.py  ordercard_component.py  orderlist_component.py  productcard_component.py  productgrid_component.py  registerform_component.py  searchhistorylist_component.py  stepper.py
app/controllers/: __init__.py  auth_controller.py  categories_controller.py  order_controller.py  products_controller.py  search_controller.py  users_controller.py
app/models/: __init__.py  banner.py  base.py  cart_item.py  category.py  filter.py  login_info.py  order.py  payment_event.py  product.py  transaction.py  user.py
app/pages/: __init__.py  counter.py  main_page.py  not_found.py  onboarding_page.py
app/pages/auth/: login_page.py  register_page.py
app/pages/shared/: bestsellers_page.py  categories_page.py  checkout_page.py  latest_page.py  notifications_page.py  orderdetails_page.py  producrdetails_page.py  productdetails_page.py  search_page.py
app/pages/store/: __init__.py  account_page.py  favorites_page.py  home_page.py  (+2 more)
app/services/: __init__.py  auth_service.py  categories_service.py  order_service.py  payment_service.py  products_service.py  user_service.py
app/utils/: __init__.py  banners.py  theme.py
